--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <button class="search-btn">search</button>
                 </div>
                 <a href="#">
-                    <img src="./images/user1jpeg" width="100" height="100" alt="">
+                    <img src="./images/user1jpeg" width="10" height="100" alt="">
                 </a> <br> <br>
                 <a href="#">
                     <img src="./images/cart1.jpg" width="100" height="100" alt="">
@@ -32,6 +32,13 @@
             <li class="link-item"><a href="#" class="link">accessories</a></li>
         </ul>
     </nav>
+    <!--this is the header area-->
+    <header class="hero-section">
+        <div class="content">
+            <img src="./images/food3.jpg" width="1750" height="550" class="logo" alt="">
+            <p class="sub-heading">shoes and food place ,only the best</p>
+        </div>
+    </header>
 
 </body>
 </html>
