add a header section

--- a/index.html
+++ b/index.html
@@ -6,39 +6,44 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ECCOMMERSS-OURS-SMPS</title>
     <link rel="stylesheet" href="./pages/nav.css">
+    <link rel="stylesheet" href="./pages/home.css">
 </head>
 <body>
     <nav class="navbar">
+        <!--creating the nav and placing a logo in it ,i had issues with the image so i placed inline styling to reduce the logo size-->
         <div class="nav">
-            <img src="./images/smpslog1.jpeg" width="100" height="100" alt="SMPS-LOGO">
+            <img src="./images/smpslogo2.jpg" width="100" height="100" alt="SMPS-LOGO">
             <div class="nav items">
+                <!--here am creating a search bar ,so as to allow anyone to search on the webpage when ever they want or what ever they want to know is exisiting in the file-->
                 <div class="search">
                 <input type="text"class="search-box"placeholder="search brand,product">
                 <button class="search-btn">search</button>
                 </div>
                 <a href="#">
-                    <img src="./images/user1jpeg" width="10" height="100" alt="">
+                    <img src="./images/user102-removebg-preview.png"width="100" height ="100" alt="">
                 </a> <br> <br>
                 <a href="#">
-                    <img src="./images/cart1.jpg" width="100" height="100" alt="">
+                    <img src="./images/cart1-removebg-preview.png" width="100" height ="100"  alt="">
                 </a>
             </div>
         </div>
+        <!--here i am putting in links to represent the items i am going to sell-->
         <ul class="links-container">
+            <li class="link-item"><a href="#" class="link">sign-in</a></li>
             <li class="link-item"><a href="#" class="link">home</a></li>
-            <li class="link-item"><a href="#" class="link">women</a></li>
-            <li class="link-item"><a href="#" class="link">men</a></li>
-            <li class="link-item"><a href="#" class="link">kids</a></li>
-            <li class="link-item"><a href="#" class="link">accessories</a></li>
+            <li class="link-item"><a href="#" class="link">products</a></li>
+            <li class="link-item"><a href="#" class="link">contacts</a></li>
+            <li class="link-item"><a href="#" class="link">log-in</a></li>
         </ul>
     </nav>
     <!--this is the header area-->
     <header class="hero-section">
         <div class="content">
-            <img src="./images/food3.jpg" width="1750" height="550" class="logo" alt="">
-            <p class="sub-heading">shoes and food place ,only the best</p>
+        <img src="./images/smpslogo2.jpg" alt="smps food"> 
+        <p class="sub-heading">best food place </p> 
         </div>
     </header>
-
+    <nav class="navbar"></nav>
+    <script src="js/nav.js"></script>
 </body>
-</html>
+</html> 
