creating a product page

--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
         <p class="sub-heading">best food place </p> 
         </div>
     </header>
+     <!--this is my container section where am going to place my products-->
+        <section class="product">
+            <h2 class="product-category"></h2>
+        </section>
     <nav class="navbar"></nav>
     <script src="js/nav.js"></script>
 </body>
