styling the product page

--- a/index.html
+++ b/index.html
@@ -45,7 +45,14 @@
     </header>
      <!--this is my container section where am going to place my products-->
         <section class="product">
-            <h2 class="product-category"></h2>
+            <h2 class="product-category">best selling</h2>
+            <div class="product-container">
+                <div class="product-card">
+                    <div class="product-image">
+                       <img src="./images/food1.jpeg" class="product-thumb" alt=""> 
+                    </div>
+                </div>
+            </div>
         </section>
     <nav class="navbar"></nav>
     <script src="js/nav.js"></script>
