placing the product file into  a different folder

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <p class="sub-heading">best food place </p> 
         </div>
     </header>
-     <!--this is my container section where am going to place my products-->
+     <!--this is my container section where am going to place my products, this is the most important page -->
         <section class="product">
             <h2 class="product-category">best selling</h2>
             <div class="product-container">
