--- a/index.html
+++ b/index.html
@@ -50,9 +50,88 @@
                 <div class="product-card">
                     <div class="product-image">
                        <img src="./images/food1.jpeg" class="product-thumb" alt=""> 
+                       <button class="card-btn">add to whislist</button>
+                    </div>
+                    <div class="product-info">
+                        <h2 class="product-brand">brand</h2>
+                        <p class="product-short-des">a short line about the cloth..</p>
+                        <span class="price">$20</span><span class="actual-price">$40</span>
+                    </div>
+                </div>
+                <h2 class="product-category">b</h2>
+            <div class="product-container">
+                <div class="product-card">
+                    <div class="product-image">
+                       <img src="./images/food3.jpg" class="product-thumb" alt=""> 
+                       <button class="card-btn">add to whislist</button>
+                    </div>
+                    <div class="product-info">
+                        <h2 class="product-brand">brand</h2>
+                        <p class="product-short-des">a short line about the cloth..</p>
+                        <span class="price">$20</span><span class="actual-price">$40</span>
                     </div>
                 </div>
             </div>
+            
+        </section>
+        <section class="product">
+            <h2 class="product-category">best selling</h2>
+            <div class="product-container">
+                <div class="product-card">
+                    <div class="product-image">
+                       <img src="./images/food4.jpg" class="product-thumb" alt=""> 
+                       <button class="card-btn">add to whislist</button>
+                    </div>
+                    <div class="product-info">
+                        <h2 class="product-brand">brand</h2>
+                        <p class="product-short-des">a short line about the cloth..</p>
+                        <span class="price">$20</span><span class="actual-price">$40</span>
+                    </div>
+                </div>
+                <h2 class="product-category">b</h2>
+            <div class="product-container">
+                <div class="product-card">
+                    <div class="product-image">
+                       <img src="./images/food5.jpg" class="product-thumb" alt=""> 
+                       <button class="card-btn">add to whislist</button>
+                    </div>
+                    <div class="product-info">
+                        <h2 class="product-brand">brand</h2>
+                        <p class="product-short-des">a short line about the cloth..</p>
+                        <span class="price">$20</span><span class="actual-price">$40</span>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="product">
+            <h2 class="product-category">best selling</h2>
+            <div class="product-container">
+                <div class="product-card">
+                    <div class="product-image">
+                       <img src="./images/food7.jpeg" class="product-thumb" alt=""> 
+                       <button class="card-btn">add to whislist</button>
+                    </div>
+                    <div class="product-info">
+                        <h2 class="product-brand">brand</h2>
+                        <p class="product-short-des">a short line about the cloth..</p>
+                        <span class="price">$20</span><span class="actual-price">$40</span>
+                    </div>
+                </div>
+                <h2 class="product-category">b</h2>
+            <div class="product-container">
+                <div class="product-card">
+                    <div class="product-image">
+                       <img src="./images/jodens1.jpg" class="product-thumb" alt=""> 
+                       <button class="card-btn">add to whislist</button>
+                    </div>
+                    <div class="product-info">
+                        <h2 class="product-brand">brand</h2>
+                        <p class="product-short-des">a short line about the cloth..</p>
+                        <span class="price">$20</span><span class="actual-price">$40</span>
+                    </div>
+                </div>
+            </div>
+            
         </section>
     <nav class="navbar"></nav>
     <script src="js/nav.js"></script>
