--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         <!--here i am putting in links to represent the items i am going to sell-->
         <ul class="links-container">
             <li class="link-item"><a href="#" class="link">sign-in</a></li>
-            <li class="link-item"><a href="#" class="link">home</a></li>
-            <li class="link-item"><a href="#" class="link">products</a></li>
+            <li class="link-item"><a href="./index.html" class="link">home</a></li>
+            <li class="link-item"><a href="./product.html" class="link">products</a></li>
             <li class="link-item"><a href="#" class="link">contacts</a></li>
             <li class="link-item"><a href="#" class="link">log-in</a></li>
         </ul>
@@ -53,9 +53,9 @@
                        <button class="card-btn">add to whislist</button>
                     </div>
                     <div class="product-info">
-                        <h2 class="product-brand">brand</h2>
-                        <p class="product-short-des">a short line about the cloth..</p>
-                        <span class="price">$20</span><span class="actual-price">$40</span>
+                        <h2 class="product-brand">kechap</h2>
+                        <p class="product-short-des">my favorite </p>
+                        <span class="price">ksh 2000</span>
                     </div>
                 </div>
                 <h2 class="product-category">b</h2>
@@ -66,9 +66,9 @@
                        <button class="card-btn">add to whislist</button>
                     </div>
                     <div class="product-info">
-                        <h2 class="product-brand">brand</h2>
-                        <p class="product-short-des">a short line about the cloth..</p>
-                        <span class="price">$20</span><span class="actual-price">$40</span>
+                        <h2 class="product-brand">kaprika</h2>
+                        <p class="product-short-des">an indian dish</p>
+                        <span class="price">ksh 1800</span>
                     </div>
                 </div>
             </div>
@@ -83,9 +83,9 @@
                        <button class="card-btn">add to whislist</button>
                     </div>
                     <div class="product-info">
-                        <h2 class="product-brand">brand</h2>
-                        <p class="product-short-des">a short line about the cloth..</p>
-                        <span class="price">$20</span><span class="actual-price">$40</span>
+                        <h2 class="product-brand">kenchap</h2>
+                        <p class="product-short-des">it is a fast food</p>
+                        <span class="price">ksh 2500</span>
                     </div>
                 </div>
                 <h2 class="product-category">b</h2>
@@ -96,9 +96,9 @@
                        <button class="card-btn">add to whislist</button>
                     </div>
                     <div class="product-info">
-                        <h2 class="product-brand">brand</h2>
-                        <p class="product-short-des">a short line about the cloth..</p>
-                        <span class="price">$20</span><span class="actual-price">$40</span>
+                        <h2 class="product-brand">chill pay </h2>
+                        <p class="product-short-des">one of our best dishes</p>
+                        <span class="price"> ksh 2000</span>
                     </div>
                 </div>
             </div>
@@ -112,9 +112,9 @@
                        <button class="card-btn">add to whislist</button>
                     </div>
                     <div class="product-info">
-                        <h2 class="product-brand">brand</h2>
-                        <p class="product-short-des">a short line about the cloth..</p>
-                        <span class="price">$20</span><span class="actual-price">$40</span>
+                        <h2 class="product-brand">killit</h2>
+                        <p class="product-short-des">it ment for weddings</p>
+                        <span class="price">ksh 1500</span>
                     </div>
                 </div>
                 <h2 class="product-category">b</h2>
@@ -125,9 +125,9 @@
                        <button class="card-btn">add to whislist</button>
                     </div>
                     <div class="product-info">
-                        <h2 class="product-brand">brand</h2>
-                        <p class="product-short-des">a short line about the cloth..</p>
-                        <span class="price">$20</span><span class="actual-price">$40</span>
+                        <h2 class="product-brand">shoe</h2>
+                        <p class="product-short-des">best shoe jordans</p>
+                        <span class="price">ksh  3600</span>
                     </div>
                 </div>
             </div>
