--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -46,6 +46,9 @@
      <!--this is my container section where am going to place my products, this is the most important page -->
         <section class="product">
             <h2 class="product-category">best selling</h2>
+            <button class="pre-btn"><img src="img/arrow.png" alt=""></button>
+            <button class="nxt-btn"><img src="img/arrow.png" alt=""></button>
+
             <div class="product-container">
                 <div class="product-card">
                     <div class="product-image">
@@ -135,5 +138,6 @@
         </section>
     <nav class="navbar"></nav>
     <script src="js/nav.js"></script>
+    <script src="js/home.js"></script>
 </body>
 </html> 
