--- a/index.html
+++ b/index.html
@@ -52,8 +52,10 @@
             <div class="product-container">
                 <div class="product-card">
                     <div class="product-image">
-                       <img src="./images/food1.jpeg" class="product-thumb" alt=""> 
-                       <button class="card-btn">add to whislist</button>
+                       <img src="./images/food1.jpeg" class="product-thumb" alt="">
+                       <a href="./description1.html">
+                           <button class="card-btn">buy </button>
+                        </a>
                     </div>
                     <div class="product-info">
                         <h2 class="product-brand">kechap</h2>
@@ -66,7 +68,9 @@
                 <div class="product-card">
                     <div class="product-image">
                        <img src="./images/food3.jpg" class="product-thumb" alt=""> 
-                       <button class="card-btn">add to whislist</button>
+                       <a href="./description1.html">
+                        <button class="card-btn">buy </button>
+                     </a>
                     </div>
                     <div class="product-info">
                         <h2 class="product-brand">kaprika</h2>
@@ -83,7 +87,9 @@
                 <div class="product-card">
                     <div class="product-image">
                        <img src="./images/food4.jpg" class="product-thumb" alt=""> 
-                       <button class="card-btn">add to whislist</button>
+                       <a href="./description1.html">
+                        <button class="card-btn">buy </button>
+                     </a>
                     </div>
                     <div class="product-info">
                         <h2 class="product-brand">kenchap</h2>
@@ -96,7 +102,9 @@
                 <div class="product-card">
                     <div class="product-image">
                        <img src="./images/food5.jpg" class="product-thumb" alt=""> 
-                       <button class="card-btn">add to whislist</button>
+                       <a href="./description1.html">
+                        <button class="card-btn">buy </button>
+                     </a>
                     </div>
                     <div class="product-info">
                         <h2 class="product-brand">chill pay </h2>
@@ -112,7 +120,9 @@
                 <div class="product-card">
                     <div class="product-image">
                        <img src="./images/food7.jpeg" class="product-thumb" alt=""> 
-                       <button class="card-btn">add to whislist</button>
+                       <a href="./description1.html">
+                        <button class="card-btn">buy </button>
+                     </a>
                     </div>
                     <div class="product-info">
                         <h2 class="product-brand">killit</h2>
@@ -125,7 +135,9 @@
                 <div class="product-card">
                     <div class="product-image">
                        <img src="./images/jodens1.jpg" class="product-thumb" alt=""> 
-                       <button class="card-btn">add to whislist</button>
+                       <a href="./description1.html">
+                        <button class="card-btn">buy </button>
+                     </a>
                     </div>
                     <div class="product-info">
                         <h2 class="product-brand">shoe</h2>
