adding a collection page

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <!--here am creating a search bar ,so as to allow anyone to search on the webpage when ever they want or what ever they want to know is exisiting in the file-->
                 <div class="search">
                 <input type="text"class="search-box"placeholder="search brand,product">
-                <button class="search-btn">search</button>
+                                                                                                                                                                <button class="search-btn">search</button>
                 </div>
                 <a href="#">
                     <img src="./images/user102-removebg-preview.png"width="100" height ="100" alt="">
@@ -147,6 +147,21 @@
                 </div>
             </div>
             
+        </section>
+        <!--collections-->
+        <section class="collection-container">
+            <a href="#" class="collection"></a>
+            <img src="./images/food1.jpeg" alt="food image">
+        <p class="collection-title">women <br> apparels</p>
+    </a>
+    <a href="#" class="collection">
+        <img src="./images/jodens2.jpg" alt="shoe image">
+        <p class="collection-title">men <br> apparels</p>
+    </a>
+    <a href="#" class="collection">
+        <img src="img/accessories-collection.png" alt="">
+        <p class="collection-title">accessories</p>
+    </a>
         </section>
     <nav class="navbar"></nav>
     <script src="js/nav.js"></script>
