styling the image inlinely

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         <p class="collection-title">women <br> apparels</p>
     </a>
     <a href="#" class="collection">
-        <img src="./images/jodens2.jpg" alt="shoe image">
+        <img src="./images/jodens2.jpg" width  alt="shoe image">
         <p class="collection-title">men <br> apparels</p>
     </a>
     <a href="#" class="collection">
