--- a/index.html
+++ b/index.html
@@ -148,20 +148,22 @@
             </div>
             
         </section>
-        <!--collections-->
+        <!--collections this a collection of all the products we are selling-->
         <section class="collection-container">
+            <div class="product-card"></div>
             <a href="#" class="collection"></a>
             <img src="./images/food1.jpeg" alt="food image">
         <p class="collection-title">women <br> apparels</p>
     </a>
     <a href="#" class="collection">
-        <img src="./images/jodens2.jpg" width  alt="shoe image">
+        <img src="./images/jodens2.jpg" width="60" height="60"  alt="shoe image">
         <p class="collection-title">men <br> apparels</p>
     </a>
     <a href="#" class="collection">
-        <img src="img/accessories-collection.png" alt="">
+        <img src="img/accessories-collection.png" width="60" height="60" alt="">
         <p class="collection-title">accessories</p>
     </a>
+</div>
         </section>
     <nav class="navbar"></nav>
     <script src="js/nav.js"></script>
