--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <li class="link-item"><a href="#" class="link">sign-in</a></li>
             <li class="link-item"><a href="./index.html" class="link">home</a></li>
             <li class="link-item"><a href="./product.html" class="link">products</a></li>
-            <li class="link-item"><a href="#" class="link">contacts</a></li>
+            <li class="link-item"><a href="./contact.html" class="link">contacts</a></li>
             <li class="link-item"><a href="#" class="link">log-in</a></li>
         </ul>
     </nav>
@@ -147,23 +147,6 @@
                 </div>
             </div>
             
-        </section>
-        <!--collections this a collection of all the products we are selling-->
-        <section class="collection-container">
-            <div class="product-card"></div>
-            <a href="#" class="collection"></a>
-            <img src="./images/food1.jpeg" alt="food image">
-        <p class="collection-title">women <br> apparels</p>
-    </a>
-    <a href="#" class="collection">
-        <img src="./images/jodens2.jpg" width="60" height="60"  alt="shoe image">
-        <p class="collection-title">men <br> apparels</p>
-    </a>
-    <a href="#" class="collection">
-        <img src="img/accessories-collection.png" width="60" height="60" alt="">
-        <p class="collection-title">accessories</p>
-    </a>
-</div>
         </section>
     <nav class="navbar"></nav>
     <script src="js/nav.js"></script>
