adding the link to signup

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
         <!--here i am putting in links to represent the items i am going to sell-->
         <ul class="links-container">
-            <li class="link-item"><a href="#" class="link">sign-in</a></li>
+            <li class="link-item"><a href="./sign-up.html" class="link">sign-in</a></li>
             <li class="link-item"><a href="./index.html" class="link">home</a></li>
             <li class="link-item"><a href="./product.html" class="link">products</a></li>
             <li class="link-item"><a href="./contact.html" class="link">contacts</a></li>
