changing the layout

--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./pages/contact.css">
 </head>
 <body>
+   <!--here wa are instructing how the contact page should look like-->
     <h1>Contact form</h1>
     <form name="myForm" action="/file.php" onsubmit="return validateForm()" method="post">
         <table class="form-style">
