--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <li class="link-item"><a href="./index.html" class="link">home</a></li>
             <li class="link-item"><a href="./product.html" class="link">products</a></li>
             <li class="link-item"><a href="./contact.html" class="link">contacts</a></li>
-            <li class="link-item"><a href="#" class="link">log-in</a></li>
+            <li class="link-item"><a href="./log-in.html" class="link">log-in</a></li>
         </ul>
     </nav>
     <!--this is the header area-->
