adding links to the sign-up page

--- a/sign-up.html
+++ b/sign-up.html
@@ -9,7 +9,7 @@
     integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <link rel="stylesheet" href="./pages/nav.css">
     <link rel="stylesheet" href="./pages/nav.js">
-    <link rel="stylesheet" href="./pages/sign-up.css">
+    <link rel="stylesheet" href="./pages/contact.css">
     <title>Sign-up page.</title>
 </head>
 <body>
@@ -20,8 +20,7 @@
             <div class="nav items">
                 <!--here am creating a search bar ,so as to allow anyone to search on the webpage when ever they want or what ever they want to know is exisiting in the file-->
                 <div class="search">
-                <input type="text"class="search-box"placeholder="search brand,product">
-                                                                                                                                                                <button class="search-btn">search</button>
+                <input type="text"class="search-box"placeholder="search brand,product">                                                                                                                                                           <button class="search-btn">search</button>
                 </div>
                 <a href="#">
                     <img src="./images/user102-removebg-preview.png"width="100" height ="100" alt="">
